--- a/lxc.yml
+++ b/lxc.yml
@@ -36,6 +36,7 @@
         - irssi
         - unattended-upgrades
         - build-essential
+        - mercurial
     - name: Copy the unattended upgrades file
       copy: src=files/50unattended-upgrades dest=/etc/apt/apt.conf.d/49unattended-upgrades
 
